src/antlr4/fxParser.cpp

// Generated from fx.g4 by ANTLR 4.7.2


#include "fxListener.h"
#include "fxVisitor.h"

#include "fxParser.h"


using namespace antlrcpp;
using namespace antlr4;

fxParser::fxParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

fxParser::~fxParser() {
  delete _interpreter;
}

std::string fxParser::getGrammarFileName() const {
  return "fx.g4";
}

const std::vector<std::string>& fxParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& fxParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

fxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fxParser::TopDefContext *> fxParser::ProgramContext::topDef() {
  return getRuleContexts<fxParser::TopDefContext>();
}

fxParser::TopDefContext* fxParser::ProgramContext::topDef(size_t i) {
  return getRuleContext<fxParser::TopDefContext>(i);
}


size_t fxParser::ProgramContext::getRuleIndex() const {
  return fxParser::RuleProgram;
}

void fxParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void fxParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any fxParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

fxParser::ProgramContext* fxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, fxParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(46);
      topDef();
      setState(49); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__2)
      | (1ULL << fxParser::T__17)
      | (1ULL << fxParser::T__18)
      | (1ULL << fxParser::T__19)
      | (1ULL << fxParser::T__20)
      | (1ULL << fxParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopDefContext ------------------------------------------------------------------

fxParser::TopDefContext::TopDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fxParser::FuncDefContext* fxParser::TopDefContext::funcDef() {
  return getRuleContext<fxParser::FuncDefContext>(0);
}

fxParser::ClassDefContext* fxParser::TopDefContext::classDef() {
  return getRuleContext<fxParser::ClassDefContext>(0);
}


size_t fxParser::TopDefContext::getRuleIndex() const {
  return fxParser::RuleTopDef;
}

void fxParser::TopDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopDef(this);
}

void fxParser::TopDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopDef(this);
}


antlrcpp::Any fxParser::TopDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitTopDef(this);
  else
    return visitor->visitChildren(this);
}

fxParser::TopDefContext* fxParser::topDef() {
  TopDefContext *_localctx = _tracker.createInstance<TopDefContext>(_ctx, getState());
  enterRule(_localctx, 2, fxParser::RuleTopDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fxParser::T__17:
      case fxParser::T__18:
      case fxParser::T__19:
      case fxParser::T__20:
      case fxParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        funcDef();
        break;
      }

      case fxParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        classDef();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

fxParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fxParser::Type_Context* fxParser::FuncDefContext::type_() {
  return getRuleContext<fxParser::Type_Context>(0);
}

tree::TerminalNode* fxParser::FuncDefContext::ID() {
  return getToken(fxParser::ID, 0);
}

fxParser::BlockContext* fxParser::FuncDefContext::block() {
  return getRuleContext<fxParser::BlockContext>(0);
}

fxParser::ArgContext* fxParser::FuncDefContext::arg() {
  return getRuleContext<fxParser::ArgContext>(0);
}


size_t fxParser::FuncDefContext::getRuleIndex() const {
  return fxParser::RuleFuncDef;
}

void fxParser::FuncDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDef(this);
}

void fxParser::FuncDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDef(this);
}


antlrcpp::Any fxParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

fxParser::FuncDefContext* fxParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 4, fxParser::RuleFuncDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    type_();
    setState(56);
    match(fxParser::ID);
    setState(57);
    match(fxParser::T__0);
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__17)
      | (1ULL << fxParser::T__18)
      | (1ULL << fxParser::T__19)
      | (1ULL << fxParser::T__20)
      | (1ULL << fxParser::ID))) != 0)) {
      setState(58);
      arg();
    }
    setState(61);
    match(fxParser::T__1);
    setState(62);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDefContext ------------------------------------------------------------------

fxParser::ClassDefContext::ClassDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> fxParser::ClassDefContext::ID() {
  return getTokens(fxParser::ID);
}

tree::TerminalNode* fxParser::ClassDefContext::ID(size_t i) {
  return getToken(fxParser::ID, i);
}

std::vector<fxParser::ClassItemContext *> fxParser::ClassDefContext::classItem() {
  return getRuleContexts<fxParser::ClassItemContext>();
}

fxParser::ClassItemContext* fxParser::ClassDefContext::classItem(size_t i) {
  return getRuleContext<fxParser::ClassItemContext>(i);
}


size_t fxParser::ClassDefContext::getRuleIndex() const {
  return fxParser::RuleClassDef;
}

void fxParser::ClassDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDef(this);
}

void fxParser::ClassDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDef(this);
}


antlrcpp::Any fxParser::ClassDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitClassDef(this);
  else
    return visitor->visitChildren(this);
}

fxParser::ClassDefContext* fxParser::classDef() {
  ClassDefContext *_localctx = _tracker.createInstance<ClassDefContext>(_ctx, getState());
  enterRule(_localctx, 6, fxParser::RuleClassDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(fxParser::T__2);
    setState(65);
    match(fxParser::ID);
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == fxParser::T__3) {
      setState(66);
      match(fxParser::T__3);
      setState(67);
      match(fxParser::ID);
    }
    setState(70);
    match(fxParser::T__4);
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__17)
      | (1ULL << fxParser::T__18)
      | (1ULL << fxParser::T__19)
      | (1ULL << fxParser::T__20)
      | (1ULL << fxParser::ID))) != 0)) {
      setState(71);
      classItem();
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    match(fxParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassItemContext ------------------------------------------------------------------

fxParser::ClassItemContext::ClassItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fxParser::ClassItemContext::getRuleIndex() const {
  return fxParser::RuleClassItem;
}

void fxParser::ClassItemContext::copyFrom(ClassItemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FieldDeclContext ------------------------------------------------------------------

fxParser::Type_Context* fxParser::FieldDeclContext::type_() {
  return getRuleContext<fxParser::Type_Context>(0);
}

tree::TerminalNode* fxParser::FieldDeclContext::ID() {
  return getToken(fxParser::ID, 0);
}

fxParser::FieldDeclContext::FieldDeclContext(ClassItemContext *ctx) { copyFrom(ctx); }

void fxParser::FieldDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFieldDecl(this);
}
void fxParser::FieldDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFieldDecl(this);
}

antlrcpp::Any fxParser::FieldDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitFieldDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MethodDefContext ------------------------------------------------------------------

fxParser::Type_Context* fxParser::MethodDefContext::type_() {
  return getRuleContext<fxParser::Type_Context>(0);
}

tree::TerminalNode* fxParser::MethodDefContext::ID() {
  return getToken(fxParser::ID, 0);
}

fxParser::BlockContext* fxParser::MethodDefContext::block() {
  return getRuleContext<fxParser::BlockContext>(0);
}

fxParser::ArgContext* fxParser::MethodDefContext::arg() {
  return getRuleContext<fxParser::ArgContext>(0);
}

fxParser::MethodDefContext::MethodDefContext(ClassItemContext *ctx) { copyFrom(ctx); }

void fxParser::MethodDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethodDef(this);
}
void fxParser::MethodDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethodDef(this);
}

antlrcpp::Any fxParser::MethodDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitMethodDef(this);
  else
    return visitor->visitChildren(this);
}
fxParser::ClassItemContext* fxParser::classItem() {
  ClassItemContext *_localctx = _tracker.createInstance<ClassItemContext>(_ctx, getState());
  enterRule(_localctx, 8, fxParser::RuleClassItem);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ClassItemContext *>(_tracker.createInstance<fxParser::FieldDeclContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(79);
      type_();
      setState(80);
      match(fxParser::ID);
      setState(81);
      match(fxParser::T__6);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ClassItemContext *>(_tracker.createInstance<fxParser::MethodDefContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(83);
      type_();
      setState(84);
      match(fxParser::ID);
      setState(85);
      match(fxParser::T__0);
      setState(87);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << fxParser::T__17)
        | (1ULL << fxParser::T__18)
        | (1ULL << fxParser::T__19)
        | (1ULL << fxParser::T__20)
        | (1ULL << fxParser::ID))) != 0)) {
        setState(86);
        arg();
      }
      setState(89);
      match(fxParser::T__1);
      setState(90);
      block();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

fxParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fxParser::VarDefContext *> fxParser::ArgContext::varDef() {
  return getRuleContexts<fxParser::VarDefContext>();
}

fxParser::VarDefContext* fxParser::ArgContext::varDef(size_t i) {
  return getRuleContext<fxParser::VarDefContext>(i);
}


size_t fxParser::ArgContext::getRuleIndex() const {
  return fxParser::RuleArg;
}

void fxParser::ArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg(this);
}

void fxParser::ArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg(this);
}


antlrcpp::Any fxParser::ArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitArg(this);
  else
    return visitor->visitChildren(this);
}

fxParser::ArgContext* fxParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 10, fxParser::RuleArg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    varDef();
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == fxParser::T__7) {
      setState(95);
      match(fxParser::T__7);
      setState(96);
      varDef();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

fxParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fxParser::Type_Context* fxParser::VarDefContext::type_() {
  return getRuleContext<fxParser::Type_Context>(0);
}

tree::TerminalNode* fxParser::VarDefContext::ID() {
  return getToken(fxParser::ID, 0);
}


size_t fxParser::VarDefContext::getRuleIndex() const {
  return fxParser::RuleVarDef;
}

void fxParser::VarDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDef(this);
}

void fxParser::VarDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDef(this);
}


antlrcpp::Any fxParser::VarDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitVarDef(this);
  else
    return visitor->visitChildren(this);
}

fxParser::VarDefContext* fxParser::varDef() {
  VarDefContext *_localctx = _tracker.createInstance<VarDefContext>(_ctx, getState());
  enterRule(_localctx, 12, fxParser::RuleVarDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    type_();
    setState(103);
    match(fxParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

fxParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fxParser::StmtContext *> fxParser::BlockContext::stmt() {
  return getRuleContexts<fxParser::StmtContext>();
}

fxParser::StmtContext* fxParser::BlockContext::stmt(size_t i) {
  return getRuleContext<fxParser::StmtContext>(i);
}


size_t fxParser::BlockContext::getRuleIndex() const {
  return fxParser::RuleBlock;
}

void fxParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void fxParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any fxParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

fxParser::BlockContext* fxParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 14, fxParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(fxParser::T__4);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__6)
      | (1ULL << fxParser::T__8)
      | (1ULL << fxParser::T__10)
      | (1ULL << fxParser::T__14)
      | (1ULL << fxParser::T__15)
      | (1ULL << fxParser::T__17)
      | (1ULL << fxParser::T__18)
      | (1ULL << fxParser::T__19)
      | (1ULL << fxParser::T__20)
      | (1ULL << fxParser::T__23)
      | (1ULL << fxParser::T__24)
      | (1ULL << fxParser::INT)
      | (1ULL << fxParser::ID)
      | (1ULL << fxParser::STR))) != 0)) {
      setState(106);
      stmt();
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(112);
    match(fxParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

fxParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fxParser::VarAssignDefContext* fxParser::StmtContext::varAssignDef() {
  return getRuleContext<fxParser::VarAssignDefContext>(0);
}

fxParser::AssignStmtContext* fxParser::StmtContext::assignStmt() {
  return getRuleContext<fxParser::AssignStmtContext>(0);
}

fxParser::ReturnStmtContext* fxParser::StmtContext::returnStmt() {
  return getRuleContext<fxParser::ReturnStmtContext>(0);
}

fxParser::IfStmtContext* fxParser::StmtContext::ifStmt() {
  return getRuleContext<fxParser::IfStmtContext>(0);
}

fxParser::ForStmtContext* fxParser::StmtContext::forStmt() {
  return getRuleContext<fxParser::ForStmtContext>(0);
}

fxParser::ExprContext* fxParser::StmtContext::expr() {
  return getRuleContext<fxParser::ExprContext>(0);
}


size_t fxParser::StmtContext::getRuleIndex() const {
  return fxParser::RuleStmt;
}

void fxParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void fxParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any fxParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

fxParser::StmtContext* fxParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 16, fxParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(114);
      match(fxParser::T__6);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(115);
      varAssignDef();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(116);
      assignStmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(117);
      returnStmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(118);
      ifStmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(119);
      forStmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(120);
      expr(0);
      setState(121);
      match(fxParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStmtContext ------------------------------------------------------------------

fxParser::ForStmtContext::ForStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fxParser::ExprContext *> fxParser::ForStmtContext::expr() {
  return getRuleContexts<fxParser::ExprContext>();
}

fxParser::ExprContext* fxParser::ForStmtContext::expr(size_t i) {
  return getRuleContext<fxParser::ExprContext>(i);
}

fxParser::BlockContext* fxParser::ForStmtContext::block() {
  return getRuleContext<fxParser::BlockContext>(0);
}


size_t fxParser::ForStmtContext::getRuleIndex() const {
  return fxParser::RuleForStmt;
}

void fxParser::ForStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStmt(this);
}

void fxParser::ForStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStmt(this);
}


antlrcpp::Any fxParser::ForStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitForStmt(this);
  else
    return visitor->visitChildren(this);
}

fxParser::ForStmtContext* fxParser::forStmt() {
  ForStmtContext *_localctx = _tracker.createInstance<ForStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, fxParser::RuleForStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(fxParser::T__8);
    setState(126);
    match(fxParser::T__0);
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__23)
      | (1ULL << fxParser::T__24)
      | (1ULL << fxParser::INT)
      | (1ULL << fxParser::ID)
      | (1ULL << fxParser::STR))) != 0)) {
      setState(127);
      expr(0);
    }
    setState(130);
    match(fxParser::T__6);
    setState(131);
    expr(0);
    setState(132);
    match(fxParser::T__6);
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fxParser::T__23)
      | (1ULL << fxParser::T__24)
      | (1ULL << fxParser::INT)
      | (1ULL << fxParser::ID)
      | (1ULL << fxParser::STR))) != 0)) {
      setState(133);
      expr(0);
    }
    setState(136);
    match(fxParser::T__1);
    setState(137);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarAssignDefContext ------------------------------------------------------------------

fxParser::VarAssignDefContext::VarAssignDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t fxParser::VarAssignDefContext::getRuleIndex() const {
  return fxParser::RuleVarAssignDef;
}

void fxParser::VarAssignDefContext::copyFrom(VarAssignDefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MatrixAgnDeclContext ------------------------------------------------------------------

tree::TerminalNode* fxParser::MatrixAgnDeclContext::ID() {
  return getToken(fxParser::ID, 0);
}

fxParser::MatrixConstContext* fxParser::MatrixAgnDeclContext::matrixConst() {
  return getRuleContext<fxParser::MatrixConstContext>(0);
}

fxParser::MatrixAgnDeclContext::MatrixAgnDeclContext(VarAssignDefContext *ctx) { copyFrom(ctx); }

void fxParser::MatrixAgnDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatrixAgnDecl(this);
}
void fxParser::MatrixAgnDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatrixAgnDecl(this);
}

antlrcpp::Any fxParser::MatrixAgnDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fxVisitor*>(visitor))
    return parserVisitor->visitMatrixAgnDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AgnDeclContext ------------------------------------------------------------------

fxParser::Type_Context* fxParser::AgnDeclContext::type_() {
  return getRuleContext<fxParser::Type_Context>(0);
}

tree::TerminalNode* fxParser::AgnDeclContext::ID() {
  return getToken(fxParser::ID, 0);
}

fxParser::ExprContext* fxParser::AgnDeclContext::expr() {
  return getRuleContext<fxParser::ExprContext>(0);
}

fxParser::AgnDeclContext::AgnDeclContext(VarAssignDefContext *ctx) { copyFrom(ctx); }
